2004-03-17  Atsushi Enomoto <atsushi@ximian.com>

	* SignedXml.cs : the result from enveloped signature transform should
	  be canonicalized before getting its hash.
	* XmlDsigEnvelopedSignatureTransform.cs : in XPath selection,
	  if the node is Signature itself it is not allowed.
	  PreserveWhitespace is required.

2004-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* SignedXml.cs: Changed (again). This time we use the Stream when 
	loading the document. We now pass 14 out of 15 of the Merlin's
	tests (including one that MS fails). The only failing test is the
	one that use the EnvelopedTransform (unfinished).

2004-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* SignedXml.cs: Commented my last changes to SignedXml as it made other
	unis tests fail (in the c14n-izer).

2004-03-16  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDsigNodeList.cs : removed BOM from code file.

2004-03-16  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDsigNodeList.cs : added.
	* XmlDsigXPathTransform.cs : removed XmlDsigNodeList class.
	* XmlDsigEnvelopedSignatureTransform.cs :
	  Implemented GetOutput(). However, it is totally MS behavior
	  dependent and not based on the spec (we can reimplement it based on
	  improved XmlDsigXPathTransform).
	* SignedXml.cs : in GetOutput(), accept XmlNodeList input too.

2004-03-15  Sebastien Pouliot  <sebastien@ximian.com>

	* SignedXml.cs: Now use the original Signature element before applying
	the C14N transformation. Added a check for null in LoadXml.

2004-03-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDsigXPathTransform.cs : implemented GetOutput() (with some 
	  internal XPath context classes).

2004-03-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDsigXsltTransform.cs : LoadInnerXml() should just load stylesheet
	  and LoadInput() should just load transformed document.
	  Transformation should be done in GetOutput() because either of the
	  stylesheet or input can be loaded in prior. Adjusted code format.
